fix toc wrap

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -709,3 +709,9 @@ figure img:target{
   height: auto;
 }
 
+a.toc-link {
+    display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
